added test targets in mpsutil's build.xml